# python-utils

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: decode_secret_message.py
src/http_client/: __init__.py  http_client.py
src/trace_decorator/: __init__.py  instrument.py
tests/http_client/: test_http_client.py
tests/trace_decorator/: span_recorder.py  test_instrument.py
